# digital_table_effects

./: README.md
CCS_tests/Teste01/: .cproject  .project
CCS_tests/Teste02/: .cproject
CCS_tests/Teste04/: lcd.h  principal.c  timer.c
CCS_tests/Teste05/: VC5502.cmd  principal.c
CCS_tests/Teste06/: principal.c
CCS_tests/Teste09/: .project  lcd.c  led.h  principal.c
CCS_tests/Teste10/: .cproject  aic3204.c  led.c  oled.h  principal.c
CCS_tests/Teste14/: VC5502.cmd  dataMove.asm  main.c
CCS_tests/Teste15/: .project  aic3204.c  dma.c  main.c
CCS_tests/Teste16/: .project  aic3204.c  dataMove.asm  dma.c
CCS_tests/Teste17/: .ccsproject  .project  dma.c  main.c  reverb.c  reverb.h
CCS_tests/flanger/: .cproject  flanger.c  flanger.h
CCS_tests/reverb/: reverbTest.c  reverberation.c
CCS_tests/tremolo/: .project  tremolo.c  tremoloTest.c
atividades-ccs/Teste02/: .project  VC5502.cmd  main.c
c_effects/: .gitignore  CMakeLists.txt  Makefile
c_effects/include/effects/: flanger.h  reverb.h
c_effects/src/: effects.c  effects.h  main.c
c_effects/src/effects/: flanger.c  pitch_shifter.c  reverb.c
cpp_effects_from_scratch/: CMakeLists.txt  README.md  handleAudio.cpp  handleAudio.h  main.cpp  reverb.cpp  reverb.h  wavHeader.cpp
cpp_effects_from_scratch/include/effects/: flanger.h  pitchShifter.h
cpp_effects_from_scratch/src/: main.cpp
cpp_effects_from_scratch/src/effects/: flanger.cpp  pitchShifter.cpp  tremolo.cpp
efeitos-c/: .gitignore  Makefile
efeitos-python/: apply_audio_effects.py  requirements.txt
projeto-final/: .cproject  .project  main.c
proposal/: README.MD  adding_effects.py  audio_effects.py
python/: audio.ipynb
(+417 files in other folders)
